# vscout

./: .gitignore  README.md  pyproject.toml
scripts/: matches.txt  matches_part2.txt  opening_matches.txt  process_single_map.sh  process_vlr_series_dry_run.sh  validate_event_logs.sh
