[project]
name = "vscout-workspace"
version = "0.1.0"
description = "V-SCOUT: Valorant VOD analysis and scouting tool"
requires-python = ">=3.10"

[tool.uv.workspace]
members = [
    "packages/valoscribe",
    "packages/vscout",
]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "pytest>=7.4.0",
    "mypy>=1.5.0",
    "ruff>=0.1.0",
]
